--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 Hello New World!
+
+<h1>YUSOLOG</h1>
+<h3>Here is yusooo's develop blog called yusolog.</h3>
+<h4>This is for : </h4>
+<p>
+  + practicing Front-end with html(markdawn), css, JS, etc...
+  + logging my develop history without Github
+  + else ...
+</p>
